# gandiv5-acme-operator

./: .gitignore  README.md  charmcraft.yaml  config.yaml  metadata.yaml  pyproject.toml  requirements.txt
lib/charms/acme_client_operator/v0/: acme_client.py
release/: main.py  pyproject.toml
src/: charm.py
tests/integration/: test_charm.py
tests/unit/: test_charm.py
