[tool.poetry]
name = "release-charm"
version = "0.1.0"
description = ""
authors = ["Matias Piipari <matias.piipari@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
